feat: Atualizações nos dropdowns e títulos THE PATH
- Adicionado 'Meme Token' nas opções de Project Type
- Atualizado 'L1/L2 Blockchain' para 'L0/L1/L2 Blockchain'
- Melhorado estilo dos dropdowns para consistência com o projeto
- Títulos dos cards 3 e 4 atualizados: 'SHIP & TRACK' e 'ITERATE & SCALE'
- CSS dos selects aprimorado com !important para garantir aplicação

--- a/index.html
+++ b/index.html
@@ -434,17 +434,17 @@
                                 <p class="the-path-card-text">Next comes the blueprint. Clear positioning, a narrative that makes sense to your market, and a plan your team can actually run. The goal is alignment on priorities, channels, and KPIs that matter.</p>
                             </div>
                             
-                            <!-- Card 3: Execution and Measurement -->
+                            <!-- Card 3: Ship & Track -->
                             <div class="the-path-card">
                                 <div class="the-path-number">03</div>
-                                <h3 class="the-path-card-title">EXECUTION AND MEASUREMENT</h3>
+                                <h3 class="the-path-card-title">SHIP & TRACK</h3>
                                 <p class="the-path-card-text">Then it is time to ship. Campaigns go live, performance is tracked, and adjustments happen quickly. The focus stays on qualified users, retention, and conversion, not vanity metrics.</p>
                             </div>
                             
-                            <!-- Card 4: Results and Optimization -->
+                            <!-- Card 4: Iterate & Scale -->
                             <div class="the-path-card">
                                 <div class="the-path-number">04</div>
-                                <h3 class="the-path-card-title">RESULTS AND OPTIMIZATION</h3>
+                                <h3 class="the-path-card-title">ITERATE & SCALE</h3>
                                 <p class="the-path-card-text">Finally, results get turned into a system. What worked, why it worked, and what to change next becomes a repeatable loop. Each cycle gets sharper, and momentum compounds instead of resetting.</p>
                             </div>
                         </div>
