--- a/contact.html
+++ b/contact.html
@@ -152,39 +152,40 @@
                                         <input class="input-style w-input" maxlength="256" name="telegram" data-name="Telegram" placeholder="Telegram @handle *" type="text" id="telegram" required="" />
                                     </div>
                                     <div id="project-type-cell" class="w-layout-cell form-cell">
-                                        <select class="input-style w-input" name="project-type" id="project-type" required="">
-                                            <option value="" disabled selected>Project Type *</option>
-                                            <option value="Token Launch">Token Launch</option>
-                                            <option value="NFT Project">NFT Project</option>
-                                            <option value="DeFi Protocol">DeFi Protocol</option>
-                                            <option value="L1/L2 Blockchain">L1/L2 Blockchain</option>
-                                            <option value="Web3 Startup">Web3 Startup</option>
-                                            <option value="DAO/Community">DAO/Community</option>
-                                            <option value="Exchange/Platform">Exchange/Platform</option>
-                                            <option value="Other">Other</option>
+                                        <select class="input-style w-input" name="project-type" id="project-type" required="" style="color: #fff; background-color: rgba(255, 255, 255, 0.05);">
+                                            <option value="" disabled selected style="color: rgba(255, 255, 255, 0.5);">Project Type *</option>
+                                            <option value="Token Launch" style="color: #000;">Token Launch</option>
+                                            <option value="Meme Token" style="color: #000;">Meme Token</option>
+                                            <option value="NFT Project" style="color: #000;">NFT Project</option>
+                                            <option value="DeFi Protocol" style="color: #000;">DeFi Protocol</option>
+                                            <option value="L0/L1/L2 Blockchain" style="color: #000;">L0/L1/L2 Blockchain</option>
+                                            <option value="Web3 Startup" style="color: #000;">Web3 Startup</option>
+                                            <option value="DAO/Community" style="color: #000;">DAO/Community</option>
+                                            <option value="Exchange/Platform" style="color: #000;">Exchange/Platform</option>
+                                            <option value="Other" style="color: #000;">Other</option>
                                         </select>
                                     </div>
                                     
                                     <!-- Row 4: Budget Range e Timeline -->
                                     <div id="budget-range-cell" class="w-layout-cell form-cell">
-                                        <select class="input-style w-input" name="budget-range" id="budget-range" required="">
-                                            <option value="" disabled selected>Budget Range *</option>
-                                            <option value="Under $5K">Under $5K</option>
-                                            <option value="$5K - $15K">$5K - $15K</option>
-                                            <option value="$15K - $50K">$15K - $50K</option>
-                                            <option value="$50K - $100K">$50K - $100K</option>
-                                            <option value="$100K+">$100K+</option>
-                                            <option value="Custom">Custom</option>
+                                        <select class="input-style w-input" name="budget-range" id="budget-range" required="" style="color: #fff; background-color: rgba(255, 255, 255, 0.05);">
+                                            <option value="" disabled selected style="color: rgba(255, 255, 255, 0.5);">Budget Range *</option>
+                                            <option value="Under $5K" style="color: #000;">Under $5K</option>
+                                            <option value="$5K - $15K" style="color: #000;">$5K - $15K</option>
+                                            <option value="$15K - $50K" style="color: #000;">$15K - $50K</option>
+                                            <option value="$50K - $100K" style="color: #000;">$50K - $100K</option>
+                                            <option value="$100K+" style="color: #000;">$100K+</option>
+                                            <option value="Custom" style="color: #000;">Custom</option>
                                         </select>
                                     </div>
                                     <div id="timeline-cell" class="w-layout-cell form-cell">
-                                        <select class="input-style w-input" name="timeline" id="timeline" required="">
-                                            <option value="" disabled selected>Timeline *</option>
-                                            <option value="ASAP / Urgent">ASAP / Urgent</option>
-                                            <option value="Within 1 month">Within 1 month</option>
-                                            <option value="1-3 months">1-3 months</option>
-                                            <option value="3-6 months">3-6 months</option>
-                                            <option value="Just exploring">Just exploring</option>
+                                        <select class="input-style w-input" name="timeline" id="timeline" required="" style="color: #fff; background-color: rgba(255, 255, 255, 0.05);">
+                                            <option value="" disabled selected style="color: rgba(255, 255, 255, 0.5);">Timeline *</option>
+                                            <option value="ASAP / Urgent" style="color: #000;">ASAP / Urgent</option>
+                                            <option value="Within 1 month" style="color: #000;">Within 1 month</option>
+                                            <option value="1-3 months" style="color: #000;">1-3 months</option>
+                                            <option value="3-6 months" style="color: #000;">3-6 months</option>
+                                            <option value="Just exploring" style="color: #000;">Just exploring</option>
                                         </select>
                                     </div>
                                     
