feat: Adiciona botão LET'S TALK no header
- Botão teal/esmeralda (#10b981) ao lado esquerdo do menu
- Link para contact.html em todas as páginas
- Estilo consistente com a identidade visual (cor da logo)
- Hover com elevação e sombra
- Responsivo: escondido em mobile (< 991px)
- Adicionado em: index, about, blog, works, contact, singleblog, singlework, privacy, terms, disclaimer

--- a/works.html
+++ b/works.html
@@ -96,6 +96,7 @@
                         <img src="images/LOGO.PNG?v=4" alt="Wevolv3" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';" />
                         <span class="logo-text-fallback" style="display:none; color: white; font-family: 'Orbitron', monospace; font-weight: 900; font-size: 28px; text-transform: uppercase; letter-spacing: 0.1em;">WEVOLV3</span>
                     </a>
+                    <a href="contact.html" class="lets-talk-btn">LET'S TALK</a>
                     <nav role="navigation" class="main-menu w-nav-menu">
                         <a href="index.html" aria-current="page" class="menu-item w-nav-link w--current">Home</a>
                         <a href="about.html" class="menu-item w-nav-link">About</a>
