fix: Corrige texto para 'works' (plural) em works.html

--- a/works.html
+++ b/works.html
@@ -115,7 +115,7 @@
             <div class="w-layout-blockcontainer main-container w-container">
                 <div class="inner-sitemap">
                     <h2 data-w-id="darkyn25" style="opacity: 0;" class="sitemap-heading">work</h2>
-                    <div data-w-id="darkyn26" style="opacity: 0;" class="stemap-text">Some of our previous work</div>
+                    <div data-w-id="darkyn26" style="opacity: 0;" class="stemap-text">Some of our previous works</div>
                 </div>
             </div>
         </div>
