feat: Troca 'Projects' por 'Solutions' e ajusta formulário de contato no mobile
- Troca texto 'Projects' para 'Solutions' no hero
- Link agora aponta para #solutions (seção solutions)
- Adiciona ID 'solutions' na seção solutions para âncora
- Reduz espaçamento entre título CONTACT e formulário no mobile
- Padding-top do contact-section reduzido para 20px no mobile (antes 60px)
- Melhora experiência mobile na página de contato

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                         <p class="hero-paragraph">
                             You're building in one of the hardest markets on earth. Communities doubt first, trust later. You don't just need attention, you need adoption that lasts.
                         </p>
-                        <a href="works.html" class="hero-projects-link w-inline-block">
-                            <div class="hero-projects-link-text">Projects</div>
+                        <a href="#solutions" class="hero-projects-link w-inline-block">
+                            <div class="hero-projects-link-text">Solutions</div>
                             <img src="images/arrow-right.png"  alt="" class="hero-proect-link-arrow" />
                         </a>
                         <div class="hero-under-text">
@@ -269,7 +269,7 @@
             </div>
         </div>
 
-        <div class="services-section">
+        <div id="solutions" class="services-section">
             <div class="w-layout-blockcontainer main-container w-container">
                 <h2 class="main-title">solutions</h2>
                 <div class="services-wrapp">
