Otimizar página de contato para mobile: priorizar formulário após 'Get in touch with us'

--- a/contact.html
+++ b/contact.html
@@ -70,17 +70,20 @@
         <div class="header">
             <div class="w-layout-blockcontainer main-container w-container">
                 <div id="home" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="header-inner w-nav">
-                    <a href="index.html" aria-current="page" class="logo w-inline-block w--current">
-                        <img src="images/LOGO.PNG?v=4" alt="Wevolv3" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';" />
-                        <span class="logo-text-fallback" style="display:none; color: white; font-family: 'Orbitron', monospace; font-weight: 900; font-size: 28px; text-transform: uppercase; letter-spacing: 0.1em;">WEVOLV3</span>
-                    </a>
+                    <div class="logo-wrapper">
+                        <a href="index.html" class="logo w-inline-block">
+                            <img src="images/LOGO.PNG?v=4" alt="Wevolv3" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';" />
+                            <span class="logo-text-fallback" style="display:none; color: white; font-family: 'Orbitron', monospace; font-weight: 900; font-size: 28px; text-transform: uppercase; letter-spacing: 0.1em;">WEVOLV3</span>
+                        </a>
+                        <div class="logo-tagline">WEB3 & CRYPTO MARKETING</div>
+                    </div>
                     <a href="contact.html" class="lets-talk-btn">LET'S TALK</a>
                     <nav role="navigation" class="main-menu w-nav-menu">
-                        <a href="index.html" aria-current="page" class="menu-item w-nav-link w--current">Home</a>
-                        <a href="about.html" class="menu-item w-nav-link">About</a>
-                        <a href="works.html" class="menu-item w-nav-link">work</a>
-                        <a href="blog.html" class="menu-item w-nav-link">blog</a>
-                        <a href="contact.html" class="menu-item w-nav-link">contact</a>
+                        <a href="index.html" class="menu-item w-nav-link">HOME</a>
+                        <a href="about.html" class="menu-item w-nav-link">ABOUT</a>
+                        <a href="works.html" class="menu-item w-nav-link">WORK</a>
+                        <a href="blog.html" class="menu-item w-nav-link">BLOG</a>
+                        <a href="contact.html" aria-current="page" class="menu-item w-nav-link w--current">CONTACT</a>
                     </nav>
                     <div class="menu-button w-nav-button">
                         <div class="icon w-icon-nav-menu"></div>
@@ -101,7 +104,7 @@
         <div class="contact-section">
             <div class="w-layout-blockcontainer main-container w-container">
                 <div id="darkyn36" class="w-layout-layout contact-stack wf-layout-layout">
-                    <div class="w-layout-cell single-cell">
+                    <div class="w-layout-cell single-cell contact-info-cell">
                         <p class="contact-text">We&#x27;re dedicated to empowering Web3 projects and businesses. Let&#x27;s explore opportunities together.</p>
                         <p class="contact-location">Global - Remote Team</p>
                         <a href="https://t.me/wevolv3" target="_blank" class="contact-link">@wevolv3</a>
@@ -127,7 +130,7 @@
                         </div>
                     </div>
 
-                    <div class="w-layout-cell single-cell">
+                    <div class="w-layout-cell single-cell contact-form-cell">
                         <h2 class="comtact-main-title contact-title-with-border">drop us a line</h2>
                         <div class="contact-form-block w-form">
                             <form id="email-form2" method="post" action="#">
