--- a/index.html
+++ b/index.html
@@ -175,17 +175,20 @@
         <div class="header">
             <div class="w-layout-blockcontainer main-container w-container">
                 <div id="home" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="header-inner w-nav">
-                    <a href="index.html" aria-current="page" class="logo w-inline-block w--current">
-                        <img src="images/LOGO.PNG?v=4" alt="Wevolv3" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';" />
-                        <span class="logo-text-fallback" style="display:none; color: white; font-family: 'Orbitron', monospace; font-weight: 900; font-size: 28px; text-transform: uppercase; letter-spacing: 0.1em;">WEVOLV3</span>
-                    </a>
+                    <div class="logo-wrapper">
+                        <a href="index.html" aria-current="page" class="logo w-inline-block w--current">
+                            <img src="images/LOGO.PNG?v=4" alt="Wevolv3" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';" />
+                            <span class="logo-text-fallback" style="display:none; color: white; font-family: 'Orbitron', monospace; font-weight: 900; font-size: 28px; text-transform: uppercase; letter-spacing: 0.1em;">WEVOLV3</span>
+                        </a>
+                        <div class="logo-tagline">WEB3 & CRYPTO MARKETING</div>
+                    </div>
                     <a href="contact.html" class="lets-talk-btn">LET'S TALK</a>
                     <nav role="navigation" class="main-menu w-nav-menu">
-                        <a href="index.html" aria-current="page" class="menu-item w-nav-link w--current">Home</a>
-                        <a href="about.html" class="menu-item w-nav-link">About</a>
-                        <a href="works.html" class="menu-item w-nav-link">work</a>
-                        <a href="blog.html" class="menu-item w-nav-link">blog</a>
-                        <a href="contact.html" class="menu-item w-nav-link">contact</a>
+                        <a href="index.html" aria-current="page" class="menu-item w-nav-link w--current">HOME</a>
+                        <a href="about.html" class="menu-item w-nav-link">ABOUT</a>
+                        <a href="works.html" class="menu-item w-nav-link">WORK</a>
+                        <a href="blog.html" class="menu-item w-nav-link">BLOG</a>
+                        <a href="contact.html" class="menu-item w-nav-link">CONTACT</a>
                     </nav>
                     <div class="menu-button w-nav-button">
                         <div class="icon w-icon-nav-menu"></div>
@@ -307,7 +310,7 @@
                         <div class="service-nunmber">04</div>
                         <div class="service-text">Influence Marketing (KOL)</div>
                         <img
-                            src="images/influencemarketing.png"
+                            src="images/influencer.png"
                             
                             alt="Influence Marketing (KOL)"
                             class="service-img"
