Alterar texto de Community Building para Community Management

--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
                 <div class="services-wrapp">
                     <div data-w-id="darkyn10" style="opacity: 0;" class="services-item">
                         <div class="service-nunmber">01</div>
-                        <div class="service-text">Community Building</div>
+                        <div class="service-text">Community Management</div>
                         <img
                             src="images/communitybuilding.png"
                             
-                            alt="Community Building"
+                            alt="Community Management"
                             class="service-img"
                         />
                     </div>
