Substituir imagem listings.png por listing.png e redimensionar para 1400x319

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                         <div class="service-nunmber">07</div>
                         <div class="service-text">Listing</div>
                         <img
-                            src="images/listings.png"
+                            src="images/listing.png"
                             
                             alt="Listing"
                             class="service-img"
