Substituir imagem influencer.png por KOL.png e redimensionar para 1400x319

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <div class="service-nunmber">04</div>
                         <div class="service-text">Influence Marketing (KOL)</div>
                         <img
-                            src="images/influencer.png"
+                            src="images/KOL.png"
                             
                             alt="Influence Marketing (KOL)"
                             class="service-img"
