Substituir imagem prandcrossmarketing.png por PR.png e redimensionar para 1400x319

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         <div class="service-nunmber">08</div>
                         <div class="service-text">PR (Press Office)</div>
                         <img
-                            src="images/prandcrossmarketing.png"
+                            src="images/PR.png"
                             
                             alt="PR (Press Office)"
                             class="service-img"
