Alterar texto de Ads Management para ADS PLACEMENT

--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
                     </div>
                     <div data-w-id="darkyn11" style="opacity: 0;" class="services-item">
                         <div class="service-nunmber">02</div>
-                        <div class="service-text">Ads Management</div>
+                        <div class="service-text">ADS PLACEMENT</div>
                         <img
                             src="images/adspaidtraffic.png"
                             
-                            alt="Ads Management"
+                            alt="ADS PLACEMENT"
                             class="service-img"
                         />
                     </div>
