Atualizar seção STAFF: adicionar Aryan_BTC, atualizar David Oware, remover links dos outros membros

--- a/about.html
+++ b/about.html
@@ -229,10 +229,6 @@
                     <div class="team-item">
                         <div class="team-image-wrapp">
                             <img alt="Wevolv3 Team Member - Web3 Marketing Specialist" src="images/team1.png"  class="team-img" />
-                            <div class="team-scials">
-                                <a href="https://x.com/Wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="Twitter - Wevolv3" class="social-image" /></a>
-                                <a href="https://t.me/Wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="Telegram - Wevolv3" class="social-image" /></a>
-                            </div>
                         </div>
                         <div class="team-details">
                             <h4 class="team-heading">Team Member</h4>
@@ -241,28 +237,34 @@
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="Wevolv3 Team Member - Growth Hacking Specialist" src="images/team2.png"  class="team-img" />
+                            <img alt="David Oware - Business Developer" src="images/team2.png"  class="team-img" />
                             <div class="team-scials">
-                                <a href="https://x.com/Wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="Twitter - Wevolv3" class="social-image" /></a>
-                                <a href="https://t.me/Wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="Telegram - Wevolv3" class="social-image" /></a>
+                                <a href="https://x.com/ajibodav" target="_blank" class="social-link-2 w-inline-block">
+                                    <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                         <div class="team-details">
-                            <h4 class="team-heading">Team Member</h4>
-                            <div class="team-job">Growth Hacking</div>
+                            <h4 class="team-heading">David Oware</h4>
+                            <div class="team-job">Business Developer</div>
                         </div>
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="Wevolv3 Team Member - Blockchain Strategy Specialist" src="images/team3.png"  class="team-img" />
+                            <img alt="Aryan_BTC - Guerrilla Manager" src="images/team3.png"  class="team-img" />
                             <div class="team-scials">
-                                <a href="https://x.com/Wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="Twitter - Wevolv3" class="social-image" /></a>
-                                <a href="https://t.me/Wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="Telegram - Wevolv3" class="social-image" /></a>
+                                <a href="https://x.com/aryan__BTC" target="_blank" class="social-link-2 w-inline-block">
+                                    <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                                    </svg>
+                                </a>
                             </div>
                         </div>
                         <div id="w-node-_9ab0f5b9-c2c4-10f8-d11d-2e4fa0e20143-f888b461" class="team-details">
-                            <h4 class="team-heading">Team Member</h4>
-                            <div class="team-job">Blockchain Strategy</div>
+                            <h4 class="team-heading">Aryan_BTC</h4>
+                            <div class="team-job">Guerrilla Manager</div>
                         </div>
                     </div>
                 </div>
