Organizar team grid 2x2 no desktop e implementar swipe no mobile

--- a/about.html
+++ b/about.html
@@ -253,6 +253,22 @@
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
+                            <img alt="Jameel - Storytelling Specialist" src="images/team6.png"  class="team-img" />
+                            <div class="team-scials">
+                                <a href="https://x.com/ISU_122S" target="_blank" class="social-link-2 w-inline-block">
+                                    <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team-details">
+                            <h4 class="team-heading">Jameel</h4>
+                            <div class="team-job">Storytelling Specialist</div>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="team-image-wrapp">
                             <img alt="Aryan_BTC - Guerrilla Manager" src="images/team3.png"  class="team-img" />
                             <div class="team-scials">
                                 <a href="https://x.com/aryan__BTC" target="_blank" class="social-link-2 w-inline-block">
@@ -265,6 +281,38 @@
                         <div id="w-node-_9ab0f5b9-c2c4-10f8-d11d-2e4fa0e20143-f888b461" class="team-details">
                             <h4 class="team-heading">Aryan_BTC</h4>
                             <div class="team-job">Guerrilla Manager</div>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="team-image-wrapp">
+                            <img alt="Harry - Head of Marketing/ Advisory" src="images/team4.png"  class="team-img" />
+                            <div class="team-scials">
+                                <a href="https://x.com/harrydotharry?s=21" target="_blank" class="social-link-2 w-inline-block">
+                                    <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team-details">
+                            <h4 class="team-heading">Harry</h4>
+                            <div class="team-job">Head of Marketing/ Advisory</div>
+                        </div>
+                    </div>
+                    <div class="team-item">
+                        <div class="team-image-wrapp">
+                            <img alt="Danilo Damaceno - KOL Manager" src="images/team5.png"  class="team-img" />
+                            <div class="team-scials">
+                                <a href="https://x.com/DaniloCriptoVOX" target="_blank" class="social-link-2 w-inline-block">
+                                    <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                                    </svg>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="team-details">
+                            <h4 class="team-heading">Danilo Damaceno</h4>
+                            <div class="team-job">KOL Manager</div>
                         </div>
                     </div>
                 </div>
