--- a/about.html
+++ b/about.html
@@ -225,6 +225,20 @@
         <div class="team-section">
             <div class="w-layout-blockcontainer main-container w-container">
                 <h2 class="main-title">staff</h2>
+                
+                <!-- Indicação sutil para arrastar/navegar (mobile) -->
+                <div class="team-hint" id="team-hint">
+                    <span class="team-hint-text">
+                        <svg class="team-hint-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        Swipe to explore
+                        <svg class="team-hint-icon" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9 18L15 12L9 6" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </span>
+                </div>
+                
                 <div data-w-id="darkyn29" style="opacity: 0;" class="team-grid">
                     <div class="team-item">
                         <div class="team-image-wrapp">
