--- a/about.html
+++ b/about.html
@@ -267,7 +267,7 @@
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="Jameel Al-Badrani - Storytelling Specialist" src="images/team6.png"  class="team-img" />
+                            <img alt="Jameel Al-Badrani - Business Developer" src="images/team6.png"  class="team-img" />
                             <div class="team-scials">
                                 <a href="https://x.com/ISU_122S" target="_blank" class="social-link-2 w-inline-block">
                                     <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -278,7 +278,7 @@
                         </div>
                         <div class="team-details">
                             <h4 class="team-heading">Jameel Al-Badrani</h4>
-                            <div class="team-job">Storytelling Specialist</div>
+                            <div class="team-job">Business Developer</div>
                         </div>
                     </div>
                     <div class="team-item">
