Atualizar seção STAFF: adicionar Strike como Founder

--- a/about.html
+++ b/about.html
@@ -242,11 +242,18 @@
                 <div data-w-id="darkyn29" style="opacity: 0;" class="team-grid">
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="Wevolv3 Team Member - Web3 Marketing Specialist" src="images/team1.png"  class="team-img" />
+                            <img alt="Strike - Founder" src="images/team1.png"  class="team-img" />
+                            <div class="team-scials">
+                                <a href="https://x.com/wevolv3_media" target="_blank" class="social-link-2 w-inline-block">
+                                    <svg class="social-image" width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" fill="currentColor"/>
+                                    </svg>
+                                </a>
+                            </div>
                         </div>
                         <div class="team-details">
-                            <h4 class="team-heading">Team Member</h4>
-                            <div class="team-job">Web3 Marketing</div>
+                            <h4 class="team-heading">Strike</h4>
+                            <div class="team-job">Founder</div>
                         </div>
                     </div>
                     <div class="team-item">
