Atualizar imagens dos parceiros: substituir por logos Forbes, Bitcoin.com, Cointelegraph, Skkicmotion, CoinDesk, Binance e CoinMarketCap

--- a/index.html
+++ b/index.html
@@ -224,14 +224,16 @@
                 </div>
                 <div class="hero-partners">
                     <div data-w-id="darkyn23" class="hero-partners-moving">
-                        <img src="images/Clandestine.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/Boltshift.png"  width="182.5" alt="" class="hero-client-logo" />
-                        <img src="images/Biosynthesis.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/BuildingBlocks.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/AltShift.png"  width="179.5" alt="" class="hero-client-logo" />
-                        <img src="images/Clandestine.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/Boltshift.png"  width="182.5" alt="" class="hero-client-logo" />
-                        <img src="images/Biosynthesis.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/4.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/5.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/6.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/7.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="" class="hero-client-logo" />
                     </div>
                 </div>
             </div>
