--- a/about.html
+++ b/about.html
@@ -212,11 +212,16 @@
                 <h2 class="main-title">clients</h2>
                 <div class="hero-partners partners-about">
                     <div data-w-id="darkyn27" class="hero-partners-moving">
-                        <img src="images/Clandestine.png"  width="238.5" alt="Clandestine - Wevolv3 Client" class="hero-client-logo" /><img src="images/Boltshift.png"  width="182.5" alt="Boltshift - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/Biosynthesis.png"  width="238.5" alt="Biosynthesis - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/BuildingBlocks.png"  width="238.5" sizes="(max-width: 479px) 100vw, 238.5px" alt="BuildingBlocks - Wevolv3 Client" srcset="images/BuildingBlocks-p-500.png 500w, images/BuildingBlocks.png 566w" class="hero-client-logo" />
-                        <img src="images/AltShift.png"  width="179.5" alt="AltShift - Wevolv3 Client" class="hero-client-logo" /><img src="images/Clandestine.png"  width="238.5" alt="Clandestine - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/Boltshift.png"  width="182.5" alt="Boltshift - Wevolv3 Client" class="hero-client-logo" /><img src="images/Biosynthesis.png"  width="238.5" alt="Biosynthesis - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/6.png"  width="238.5" alt="Binance - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Wevolv3 Client" class="hero-client-logo" />
                     </div>
                 </div>
             </div>
