Corrigir título da seção para MEDIA PARTNERS

--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@
 
         <div class="clients-section">
             <div class="w-layout-blockcontainer main-container w-container">
-                <h2 class="main-title">MEIA PARTNERS</h2>
+                <h2 class="main-title">MEDIA PARTNERS</h2>
                 <div class="hero-partners partners-about">
                     <div data-w-id="darkyn27" class="hero-partners-moving">
                         <img src="images/1.png"  width="238.5" alt="Forbes - Wevolv3 Client" class="hero-client-logo" />
