Atualizar depoimento de MAC para texto mais profissional

--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                         </div>
                         <div class="testimonials-img-txt">
                             <img src="images/MAC.png" alt="MAC - Global KOL and Advisor" class="testimonial-img" />
-                            <p class="testimonials-txt">Bro, amazing, u are the best. LETS GOOOO</p>
+                            <p class="testimonials-txt">Amazing work, you are the best. LETS GOOO</p>
                         </div>
                     </div>
                     
