Melhorar SEO: adicionar lang=en, alt text descritivo em imagens e H1 oculto para SEO

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="667187163156a5df09557ed5">
+<html lang="en" data-wf-page="667187163156a5df09557ed5">
 
     <head>
 
@@ -212,16 +212,16 @@
                 <h2 class="main-title">MEDIA PARTNERS</h2>
                 <div class="hero-partners partners-about">
                     <div data-w-id="darkyn27" class="hero-partners-moving">
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/6.png"  width="238.5" alt="Binance - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/1.png"  width="238.5" alt="Forbes - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Wevolv3 Client" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
+                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" />
+                        <img src="images/6.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" />
+                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" />
+                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
                     </div>
                 </div>
             </div>
