--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="667187163156a5df09557ed5">
+<html lang="en" data-wf-page="667187163156a5df09557ed5">
 
     <head>
 
