--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-wf-page="667187163156a5df09557ed5">
+<html lang="en" data-wf-page="667187163156a5df09557ed5">
 
     <head>
 
@@ -197,6 +197,8 @@
         </div>
 
         <div class="hero-section">
+            <!-- SEO: Hidden H1 for search engines (visually hidden but accessible) -->
+            <h1 style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0;">Wevolv3 - Web3 Marketing & Modular Advertising Agency</h1>
             <video class="hero-video-bg" autoplay muted loop playsinline>
                 <source src="https://res.cloudinary.com/dr5eop8gf/video/upload/v1756945922/Horned_Skater_s_Neon_Highway_Ride_koti4f.mp4" type="video/mp4">
             </video>
@@ -211,7 +213,7 @@
                         </p>
                         <a href="#solutions" class="hero-projects-link w-inline-block">
                             <div class="hero-projects-link-text">Solutions</div>
-                            <img src="images/arrow-right.png"  alt="" class="hero-proect-link-arrow" />
+                            <img src="images/arrow-right.png"  alt="Arrow right icon" class="hero-proect-link-arrow" />
                         </a>
                         <div class="hero-under-text">
                             STRATEGIC, MODULAR MARKETING.<br />
@@ -224,16 +226,16 @@
                 </div>
                 <div class="hero-partners">
                     <div data-w-id="darkyn23" class="hero-partners-moving">
-                        <img src="images/1.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/5.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/6.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/7.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/4.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/1.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/2.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/3.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
+                        <img src="images/5.png"  width="238.5" alt="CoinDesk - Media Partner" class="hero-client-logo" />
+                        <img src="images/6.png"  width="238.5" alt="Binance - Media Partner" class="hero-client-logo" />
+                        <img src="images/7.png"  width="238.5" alt="CoinMarketCap - Media Partner" class="hero-client-logo" />
+                        <img src="images/4.png"  width="238.5" alt="Skkicmotion - Media Partner" class="hero-client-logo" />
+                        <img src="images/1.png"  width="238.5" alt="Forbes - Media Partner" class="hero-client-logo" />
+                        <img src="images/2.png"  width="238.5" alt="Bitcoin.com - Media Partner" class="hero-client-logo" />
+                        <img src="images/3.png"  width="238.5" alt="Cointelegraph - Media Partner" class="hero-client-logo" />
                     </div>
                 </div>
             </div>
@@ -387,7 +389,7 @@
                                 Our<br />
                                 vision
                             </h4>
-                            <img src="images/plus.png"  alt="" class="mission-plus mission-plus-right" />
+                            <img src="images/plus.png"  alt="Plus icon" class="mission-plus mission-plus-right" />
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
